# 1001-tracklist-chapter-fetch

./: .flake8  .gitignore  LICENSE  README.md  prd.md  pyproject.toml
.github/: copilot-instructions.md
src/tracklist_chapter_fetch/: __init__.py  __main__.py  cli.py  metadata.py  scraper.py  utils.py
tests/: __init__.py  test_cli.py  test_metadata.py  test_scraper.py  test_utils.py
