[project]
name = "tracklist-chapter-fetch"
version = "0.1.0"
description = "Builds a FFMETADATA chapter list from a 1001 Tracklists tracklist URL."
authors = [{ name = "Martin Tracey", email = "matracey@outlook.ie" }]
dependencies = ["fake-useragent>=2.1.0"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
  "flake8>=7.2.0",
  "pylint>=3.3.6",
  "black>=25.1.0",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist"]
extend-ignore = ["E203"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint = "flake8"
tracklist_chapter_fetch = "python -m src.tracklist_chapter_fetch"
